# meth

./: .luarc.json  .stylua.toml  Cargo.toml  build.rs
src/: lib.rs  main.rs  mat2.rs  mat3.rs  mat4.rs  vec2.rs  vec3.rs  vec4.rs
src/lua/: lopa-test.lua  meth.lua
src/lua/lopa-test/: inner.lua  inspect.lua
src/lua/meth/: inner.lua  ivec2.lua  ivec3.lua  ivec4.lua  mat2.lua  mat3.lua  mat4.lua  meth.lua  mod.lua  test.lua  vec2.lua  vec3.lua  vec4.lua
src/meth/: ivec2.lua  ivec3.lua  ivec4.lua  test.lua  vec2.lua  vec3.lua  vec4.lua
